# calorimetry-pulse-simulator

./: .editorconfig  .gitignore  .pylintrc  AnalogPulse_8cpp.html  AnalogPulse_8h.html  AnalogPulse_8h_source.html  CHANGELOG.md  CMakeLists.txt  DatasetGenerator_8cpp.html  DatasetGenerator_8h.html  DatasetGenerator_8h_source.html  Digitizer_8cpp.html  Digitizer_8h.html  Digitizer_8h_source.html  Dockerfile  IDigitizer_8h.html  IDigitizer_8h_source.html  IPulseShape_8h.html  IPulseShape_8h_source.html  PulseGenerator_8cpp.html  PulseGenerator_8h.html  PulseGenerator_8h_source.html  README.md  Random_8cpp.html  Random_8h.html  Random_8h_source.html  TextFilePulseShape_8cpp.html  TextFilePulseShape_8h.html  TextFilePulseShape_8h_source.html  annotated.html  classcps_1_1AnalogPulse-members.html  classcps_1_1AnalogPulse.html  classcps_1_1DatasetGenerator-members.html  classcps_1_1DatasetGenerator.html  classcps_1_1Digitizer-members.html  classcps_1_1Digitizer.html  classcps_1_1EventSchemeBlock-members.html  classcps_1_1EventSchemeBlock.html  classcps_1_1IDigitizer-members.html  classcps_1_1IDigitizer.html  (+24 more)
.github/workflows/: cmake.yml  docs.yml
cmake/Modules/: GTest.cmake
docs/: CMakeLists.txt  Doxyfile.in
docs/examples/c++/: Makefile  main.cpp
docs/examples/python/: analog_pulse.py  continuous_dataset.py  main.py  sliced_dataset.py
docs/examples/root/: main  main.C
include/: AnalogPulse.h  DatasetGenerator.h  Digitizer.h  IDigitizer.h  IPulseShape.h  PulseGenerator.h  Random.h  TextFilePulseShape.h
include/algorithms/: Accumulator.h
lib/: Accumulator.cpp  AnalogPulse.cpp  CMakeLists.txt  DatasetGenerator.cpp  Digitizer.cpp  IPulseShape.cpp  PulseGenerator.cpp  Random.cpp  TextFilePulseShape.cpp
python/: CMakeLists.txt  PythonBindings.i  test.py
python/tests/: accumulator_unittest.py  analog_pulse_unittest.py  dataset_generator_unittest.py  digitizer_unittest.py  pulse_generator_unittest.py  random_unittest.py  text_file_pulse_shape_unittest.py
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  (+15 more)
tests/: CMakeLists.txt  accumulator_unittest.cpp  analog_pulse_unittest.cpp  dataset_generator_unittest.cpp  digitizer_unittest.cpp  main.cpp  pulse_generator_unittest.cpp  random_unittest.cpp  text_file_pulse_shape_unittest.cpp
